[gd_scene load_steps=13 format=2]

[ext_resource path="res://Music.tscn" type="PackedScene" id=1]
[ext_resource path="res://MusicPlayer/MusicPlayer.gd" type="Script" id=2]
[ext_resource path="res://SFX/yatta.mp3" type="AudioStream" id=3]
[ext_resource path="res://SFX/Enemy Kill.ogg" type="AudioStream" id=4]
[ext_resource path="res://SFX/PlayerStartSound.mp3" type="AudioStream" id=5]
[ext_resource path="res://SFX/swordClank.mp3" type="AudioStream" id=6]
[ext_resource path="res://SFX/PlayerDeathSound.mp3" type="AudioStream" id=7]
[ext_resource path="res://SFX/new/throwingstar.wav" type="AudioStream" id=8]
[ext_resource path="res://SFX/new/getHit.wav" type="AudioStream" id=9]
[ext_resource path="res://SFX/new/getHitGrunt.mp3" type="AudioStream" id=10]
[ext_resource path="res://SFX/new/dodgeRoll2.mp3" type="AudioStream" id=11]
[ext_resource path="res://SFX/new/fabricNinjaJump.mp3" type="AudioStream" id=12]

[node name="MusicPlayer" type="Node"]
script = ExtResource( 2 )

[node name="AudioStreamPlayer" parent="." instance=ExtResource( 1 )]
autoplay = false

[node name="EnemyGrunt" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 4 )

[node name="PlayerDeathSound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 7 )

[node name="PlayerStartSoud" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 5 )

[node name="ParrySound" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 6 )

[node name="yabai" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 3 )

[node name="NinjaStarThrow" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 8 )

[node name="PlayerHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 10 )

[node name="EnemyHit" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 9 )

[node name="DodgeRoll" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 11 )

[node name="AudioStreamPlayer2" type="AudioStreamPlayer" parent="."]
stream = ExtResource( 12 )
volume_db = -6.5
